--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+# Add the following lines to your .gitattributes file
+* text=auto
+
 
 node_modules
 dist
